--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <h3 class="score">Sua pontuação: <span id="our-score">0</span></h3>
         <h3 class="opponent-score">Pontuação adversária: <span id="machine-score">0</span></h3>
 
+        <p class="atlz"> Sua escolha &#x27A1 <span id="your-choice"> </span> </p>
+        <p class="atlz"> Escolha da IA &#x27A1 <span id="machine-choice" ></span> </p>
+
 
     </section>
     <script src="./script.js"></script>
